prizes: fixed bg-megogo, tablet: aligned chips to center

--- a/src/scss/blocks/prisez.scss
+++ b/src/scss/blocks/prisez.scss
@@ -39,7 +39,7 @@
 	// height: 250px;
 
   &--megogo {
-    background-color: #00AA4F;
+    background-color: darken(#00AA4F, 10%);
   }
 
   &--hollywood {
@@ -48,7 +48,7 @@
 		justify-content: flex-end;
     flex-basis: 10%;
 
-    background-color: #ed1d24;
+    background-color: darken(#ed1d24, 10%);
   }
 
   &--lg {
@@ -57,9 +57,8 @@
 }
 
 .prizes__btn {
-	position: relative;
-  // text-align: center;
-  text-decoration: none;
+  position: relative;
+  
 	display: block;
 	margin: 0 auto;
 	width: 200px;
@@ -68,6 +67,7 @@
   margin-bottom: 30px;
   
 	text-transform: uppercase;
+  text-decoration: none;
 	color: #fff;
   font-size: 12px;
   text-align: center;
@@ -118,7 +118,14 @@
 @media (max-width: 1170px) {
   .prizes__header {
 		height: 50vh;
-	}
+  }
+  
+  .prizes__chips {
+    top: 25%;
+    left: 0;
+  
+    width: 100%;
+  }
 
 	.prizes__title {
 		width: 44vw;
